foolish/foolish-core/src/snapshots/foolish_core__approval_tests__anchored_seek_positive_boundary.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 ZPwMtJxXQAzb2oBqpJYKCVlyxNzTYIsyn0Mr1a5DqlTrhwBQL3eRFBitlUZA6gXM3Tsl52RbtcSbXalMefJKCw==
INPUT: {b = {10; 20; 30}; first = b#0; second = b#1; third = b#2; oob = b#3;}
[0] PARSED:
Brane [EMBRYONIC]
  b = 
  Brane [EMBRYONIC]
    Int(10) [INDEPENDENT]
    Int(20) [INDEPENDENT]
    Int(30) [INDEPENDENT]
  first = 
  Index(offset=0, ANCHORED) [EMBRYONIC]
  second = 
  Index(offset=1, ANCHORED) [EMBRYONIC]
  third = 
  Index(offset=2, ANCHORED) [EMBRYONIC]
  oob = 
  Index(offset=3, ANCHORED) [EMBRYONIC]
RESULT:
Brane [NK]
  b = 
  Brane [CONSTANT]
    Int(10) [INDEPENDENT]
    Int(20) [INDEPENDENT]
    Int(30) [INDEPENDENT]
  first = 
  Int(10) [INDEPENDENT]
  second = 
  Int(20) [INDEPENDENT]
  third = 
  Int(30) [INDEPENDENT]
  oob = 
  Index(offset=3, ANCHORED) [NK]
