foolish/foolish-core/src/snapshots/foolish_core__approval_tests__brane_with_single_value_head_tail.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {b = {42}; h = b^; t = b$;}
[0] PARSED:
Brane [EMBRYONIC]
  b = 
  Brane [EMBRYONIC]
    Int(42) [INDEPENDENT]
  h = 
  HeadTail(HEAD, ANCHORED) [EMBRYONIC]
  t = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  b = 
  Brane [CONSTANT]
    Int(42) [INDEPENDENT]
  h = 
  Int(42) [INDEPENDENT]
  t = 
  Int(42) [INDEPENDENT]
