foolish/foolish-core/src/snapshots/foolish_core__approval_tests__chainedArithmeticIsApproved.snap
---
source: foolish-core/src/lib.rs
assertion_line: 50
expression: output
---
INPUT: {1 + 2 + 3 + 4;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(+) [EMBRYONIC]
    Operator(+) [EMBRYONIC]
      Operator(+) [EMBRYONIC]
        Int(1) [INDEPENDENT]
        Int(2) [INDEPENDENT]
      Int(3) [INDEPENDENT]
    Int(4) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(10) [CONSTANT]
