foolish/foolish-core/src/snapshots/foolish_core__approval_tests__commentEndsStatement.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 +2dYJiQCrp/2ejKvybR9tLWD6sA+JuyZqqVp2Ec22FqKpPQSoECo8igyMJCJYWu3qVfbFTwQmFvJ90GTiN1TCg==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(1) [INDEPENDENT]
  y = 
  Int(2) [INDEPENDENT]
  z = 
  Int(3) [INDEPENDENT]
  z = 
  Int(3) [INDEPENDENT]
  z = 
  Int(3) [INDEPENDENT]
  z = 
  Int(3) [INDEPENDENT]
  can = 
  Int(4) [INDEPENDENT]
  we = 
  Int(5) [INDEPENDENT]
  this = 
  Int(6) [INDEPENDENT]
  okay = 
  Int(1) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  x = 
  Int(1) [INDEPENDENT]
  y = 
  Int(2) [INDEPENDENT]
  z = 
  Int(3) [INDEPENDENT]
  z = 
  Int(3) [INDEPENDENT]
  z = 
  Int(3) [INDEPENDENT]
  z = 
  Int(3) [INDEPENDENT]
  can = 
  Int(4) [INDEPENDENT]
  we = 
  Int(5) [INDEPENDENT]
  this = 
  Int(6) [INDEPENDENT]
  okay = 
  Int(1) [INDEPENDENT]
