foolish/foolish-core/src/snapshots/foolish_core__approval_tests__complexArithmeticIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 1688YAhypyQCgX/Phhl4BDGIiGnrJT+3IDTarmJj2Mywtqc+Dy03gjLO4gvHlg3yEleHqDPSIt3SXjme/uyJDA==
INPUT: {(5 + 3) * 2 - 1;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(-) [EMBRYONIC]
    Operator(*) [EMBRYONIC]
      Operator(+) [EMBRYONIC]
        Int(5) [INDEPENDENT]
        Int(3) [INDEPENDENT]
      Int(2) [INDEPENDENT]
    Int(1) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(15) [CONSTANT]
